<resources>
    <string name="app_name">Absensi Apps</string>
    <string name="login">Login</string>
    <string name="nik">NIK</string>
    <string name="password">Password</string>
    <string name="no_internet">Tidak ada koneksi internet</string>
    <string name="logout">Logout</string>
    <string name="absen_masuk">Absen Masuk</string>
    <string name="riwayat_absen">Riwayat Absen</string>
    <string name="please_wait">Mohon tunggu ..</string>
    <string name="done">Selesai</string>
    <string name="button">Button</string>
    <string name="waktu_dan_lokasi">Waktu &amp; Lokasi</string>
    <string name="lokasi">Lokasi</string>
    <string name="data_karyawan">Data Karyawan</string>
    <string name="colon">:</string>
    <string name="nama">Nama</string>
    <string name="foto">Foto</string>

    <string name="msg_blm_absen">Anda belum absen hari ini !</string>
    <string name="msg_blm_absen_sub">Silahkan klik tombol \'Absen Masuk\' di bawah !</string>
    <string name="msg_absen_pulang">Selamat bekerja</string>
    <string name="msg_absen_pulang_sub">Klik tombol \'Absen Pulang\' jika telah selesai bekerja</string>
    <string name="msg_sudah_absen">Terima kasih. Selamat Istirahat.</string>
    <string name="msg_sudah_absen_sub">Sampai jumpa besok</string>
    <string name="msg_izin">Anda izin hari ini</string>
    <string name="msg_izin_sub">Sampai jumpa besok</string>
    <string name="pulang">Pulang</string>
    <string name="masuk">Masuk</string>
    <string name="no_data">Anda belum pernah absen</string>
    <string name="posisi">Posisi</string>
    <string name="jabatan">Jabatan</string>
    <string name="menu_history">Menu History</string>
    <string name="keterangan_izin">Keterangan Izin</string>
    <string name="keterangan_keg">Keterangan Kegiatan</string>
    <string name="bukti_foto">Bukti Foto</string>
    <string name="keterangan_lembur">Keterangan Lembur</string>
    <string name="kegiatan">Kegiatan</string>
</resources>