<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_form"
    tools:context=".activity.IzinActivity">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="20dp"
            android:paddingHorizontal="8dp"
            android:paddingTop="50dp"
            android:background="@drawable/bg_form">

            <TextView
                android:id="@+id/textView1"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/data_karyawan"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/TextProfilePage"/>

            <RelativeLayout
                android:id="@+id/constraintLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/card_absen"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView1">

                <TextView
                    android:id="@+id/tv_nik"
                    android:text="@string/nik"
                    style="@style/TextProfilePage.Title"/>

                <TextView
                    android:id="@+id/tv_colon_nik"
                    android:layout_toEndOf="@id/tv_nik"
                    style="@style/TextProfilePage.Colon"/>

                <TextView
                    android:id="@+id/txt_nik"
                    android:layout_toEndOf="@id/tv_colon_nik"
                    android:textColor="@color/login_color"
                    android:textSize="20sp"
                    style="@style/TextProfilePage"
                    tools:text="31710703019500012314142"/>

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_below="@id/txt_nik"
                    android:text="@string/nama"
                    style="@style/TextProfilePage.Title"/>

                <TextView
                    android:id="@+id/tv_colon_name"
                    android:layout_below="@id/txt_nik"
                    android:layout_toEndOf="@id/tv_name"
                    style="@style/TextProfilePage.Colon"/>

                <TextView
                    android:id="@+id/txt_name"
                    android:layout_below="@id/txt_nik"
                    android:layout_toEndOf="@id/tv_colon_nik"
                    android:textColor="@color/login_color"
                    android:textSize="20sp"
                    style="@style/TextProfilePage"
                    tools:text="Nama Karyawan"/>

                <TextView
                    android:id="@+id/tv_posisi"
                    android:layout_below="@id/txt_name"
                    android:text="@string/posisi"
                    style="@style/TextProfilePage.Title"/>

                <TextView
                    android:id="@+id/tv_colon_posisi"
                    android:layout_below="@id/txt_name"
                    android:layout_toEndOf="@id/tv_posisi"
                    style="@style/TextProfilePage.Colon"/>

                <TextView
                    android:id="@+id/txt_posisi"
                    android:layout_below="@id/txt_name"
                    android:layout_toEndOf="@id/tv_colon_posisi"
                    android:textColor="@color/login_color"
                    android:textSize="20sp"
                    style="@style/TextProfilePage"
                    tools:text="Posisi"/>

                <TextView
                    android:id="@+id/tv_jab"
                    android:layout_below="@id/txt_posisi"
                    android:text="@string/jabatan"
                    style="@style/TextProfilePage.Title"/>

                <TextView
                    android:id="@+id/tv_colon_jab"
                    android:layout_below="@id/txt_posisi"
                    android:layout_toEndOf="@id/tv_jab"
                    style="@style/TextProfilePage.Colon"/>

                <TextView
                    android:id="@+id/txt_jab"
                    android:layout_below="@id/txt_posisi"
                    android:layout_toEndOf="@id/tv_colon_jab"
                    android:textColor="@color/login_color"
                    android:textSize="20sp"
                    style="@style/TextProfilePage"
                    tools:text="Nama Karyawan"/>
            </RelativeLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/card_absen"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout1">

                <TextClock
                    android:id="@+id/text_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/login_color"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Friday, 1 January 1999" />

                <TextClock
                    android:id="@+id/text_clock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:textColor="@color/login_color"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="01:00:00" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textView4"
                style="@style/TextProfilePage"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:text="@string/keterangan_izin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/card_absen"
                android:paddingHorizontal="10dp"
                android:paddingVertical="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4">

                <EditText
                    android:id="@+id/edt_ket"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:inputType="text|textMultiLine"
                    android:gravity="top"
                    app:layout_constraintTop_toTopOf="parent"
                    android:importantForAutofill="no"
                    tools:ignore="LabelFor" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <include
                android:id="@+id/btn_back"
                layout="@layout/btn_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginHorizontal="30dp"
                app:layout_constraintEnd_toStartOf="@id/btn_save"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/constraintLayout3"/>

            <include
                android:id="@+id/btn_save"
                layout="@layout/btn_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginHorizontal="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_back"
                app:layout_constraintTop_toBottomOf="@id/constraintLayout3"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>