<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_list"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="20dp"
    android:paddingHorizontal="10dp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/ic_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_calendar"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/waktu_dan_lokasi"/>

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            style="@style/TextProfilePage.Title"
            tools:text="20-07-2021"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:paddingEnd="0dp"
        android:paddingStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/view"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.50">

        <TextView
            android:id="@+id/txt1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/masuk"
            android:textColor="#4A88B1"
            android:textAlignment="center"
            style="@style/TextProfilePage.Title" />

        <ImageView
            android:id="@+id/ic_masuk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/txt1"
            android:background="@drawable/ic_time_masuk"
            android:contentDescription="@string/waktu_dan_lokasi"/>

        <TextView
            android:id="@+id/tv_time_in"
            android:layout_marginStart="15dp"
            android:layout_marginTop="8dp"
            android:layout_below="@id/txt1"
            android:layout_toEndOf="@id/ic_masuk"
            android:textColor="#4A88B1"
            android:textSize="16sp"
            android:textStyle="normal"
            style="@style/TextProfilePage"
            tools:text="08:00"/>

        <ImageView
            android:id="@+id/ic_place_masuk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/ic_masuk"
            android:background="@drawable/ic_person_pin_masuk"
            android:contentDescription="@string/masuk" />

        <TextView
            android:id="@+id/tv_loc_masuk"
            android:layout_marginStart="15dp"
            android:layout_marginTop="8dp"
            android:layout_below="@id/tv_time_in"
            android:layout_toEndOf="@id/ic_place_masuk"
            android:textColor="#4A88B1"
            android:textSize="16sp"
            android:textStyle="normal"
            android:ellipsize="end"
            android:maxLines="3"
            style="@style/TextProfilePage"
            tools:text="Jl. ABC"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:paddingEnd="30dp"
        android:paddingStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout"
        app:layout_constraintBottom_toTopOf="@id/view"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.50">

        <TextView
            android:id="@+id/txt2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pulang"
            android:textColor="#B14A4A"
            android:textAlignment="center"
            style="@style/TextProfilePage.Title" />

        <ImageView
            android:id="@+id/ic_pulang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/txt2"
            android:background="@drawable/ic_time_pulang"
            android:contentDescription="@string/waktu_dan_lokasi"/>

        <TextView
            android:id="@+id/tv_time_out"
            android:layout_marginStart="15dp"
            android:layout_marginTop="8dp"
            android:layout_below="@id/txt2"
            android:layout_toEndOf="@id/ic_pulang"
            android:textColor="#B14A4A"
            android:textSize="16sp"
            android:textStyle="normal"
            style="@style/TextProfilePage"
            tools:text="08:00"/>

        <ImageView
            android:id="@+id/ic_place_pulang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/ic_pulang"
            android:background="@drawable/ic_person_pin_pulang"
            android:contentDescription="@string/pulang" />

        <TextView
            android:id="@+id/tv_loc_pulang"
            android:layout_marginStart="15dp"
            android:layout_marginTop="8dp"
            android:layout_below="@id/tv_time_out"
            android:layout_toEndOf="@id/ic_place_pulang"
            android:textColor="#B14A4A"
            android:textSize="16sp"
            android:textStyle="normal"
            android:ellipsize="end"
            android:maxLines="3"
            style="@style/TextProfilePage"
            tools:text="Jl. ABC"/>

    </RelativeLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:background="@color/login_color"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>